{
  "version": 4,
  "terraform_version": "1.12.2",
  "serial": 150,
  "lineage": "7f24b9b4-0433-7f49-0918-247df810bf6b",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:301235908824:internet-gateway/igw-0f91cf724461c2169",
            "id": "igw-0f91cf724461c2169",
            "owner_id": "301235908824",
            "tags": {
              "Name": "ragdoll-igw",
              "project": "ragdoll"
            },
            "tags_all": {
              "Name": "ragdoll-igw",
              "project": "ragdoll"
            },
            "vpc_id": "vpc-05efc0b5e3fdf7e89"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0f91cf724461c2169",
            "id": "r-rtb-0146740f4e55345e81080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0146740f4e55345e8",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_route_table.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:301235908824:route-table/rtb-0146740f4e55345e8",
            "id": "rtb-0146740f4e55345e8",
            "owner_id": "301235908824",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0f91cf724461c2169",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "ragdoll-public-rt",
              "project": "ragdoll"
            },
            "tags_all": {
              "Name": "ragdoll-public-rt",
              "project": "ragdoll"
            },
            "timeouts": null,
            "vpc_id": "vpc-05efc0b5e3fdf7e89"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-08c69382139182fe8",
            "route_table_id": "rtb-0146740f4e55345e8",
            "subnet_id": "subnet-087b2f8e8fb0e0df5"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-057c0711c98d04dac",
            "route_table_id": "rtb-0146740f4e55345e8",
            "subnet_id": "subnet-0e69c6687728670d7"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:301235908824:subnet/subnet-087b2f8e8fb0e0df5",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-087b2f8e8fb0e0df5",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "301235908824",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "ragdoll-public-0",
              "project": "ragdoll"
            },
            "tags_all": {
              "Name": "ragdoll-public-0",
              "project": "ragdoll"
            },
            "vpc_id": "vpc-05efc0b5e3fdf7e89"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:301235908824:subnet/subnet-0e69c6687728670d7",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e69c6687728670d7",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "301235908824",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "ragdoll-public-1",
              "project": "ragdoll"
            },
            "tags_all": {
              "Name": "ragdoll-public-1",
              "project": "ragdoll"
            },
            "vpc_id": "vpc-05efc0b5e3fdf7e89"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:301235908824:vpc/vpc-05efc0b5e3fdf7e89",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0b38477ff939affa3",
            "default_route_table_id": "rtb-055b33c87c22be5fd",
            "default_security_group_id": "sg-000e83599358d351a",
            "dhcp_options_id": "dopt-02c0e50eb97b403e1",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-05efc0b5e3fdf7e89",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-055b33c87c22be5fd",
            "owner_id": "301235908824",
            "tags": {
              "Name": "ragdoll-vpc",
              "project": "ragdoll"
            },
            "tags_all": {
              "Name": "ragdoll-vpc",
              "project": "ragdoll"
            }
          },
          "identity_schema_version": 0
        }
      ]
    }
  ]
}